Replace default images and posts with real posts and images

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 header_class: alt
 
 banner:
-- image: /images/slide01.jpg
-  title: Magna tempus. Sed feugiat.
+- image: /images/work-from-cafe.jpg
+  title: Start working remotely
   url: "#"
-- image: /images/slide02.jpg
-  title: Aliquam veroeros nullam.
+- image: /images/work-at-sea.jpg
+  title: Make your life yours again
   url: "#"
-- image: /images/slide03.jpg
-  title: Consequat dolore adipiscing.
+- image: /images/laptop-forest.jpg
+  title: Can I do my job remotely?
   url: "#"
 
 features:
@@ -74,8 +74,8 @@ posts:
 		<div class="inner">
 			<section class="spotlight">
 				<div class="content">
-					<h2>Libero bibendum nullam vitae magna sed veroeros</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id interdum magna, ultricies aliquet curabitur sed metus pellentesque, ornare sapien quis.</p>
+					<h2>We made our office jobs remote</h2>
+					<p>We are Michael and Adriaan and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via this quiz.</p>
 				</div>
 				<span class="image"><img src="{{ site.baseurl }}/images/pic07.jpg" alt="" /></span>
 			</section>
