Add why and who

--- a/index.html
+++ b/index.html
@@ -51,22 +51,6 @@ posts:
   url: "#"
 ---
 
-{% comment %}
-
-	Slate by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
-
-	Name:
-
-		Home page
-
-	Description:
-
-		Site home page.
-
-{% endcomment %}
-
 {% include layout/banner.html slides=page.banner %}
 
 <!-- One -->
@@ -75,8 +59,13 @@ posts:
 			<section class="spotlight">
 				<div class="content">
 					<h2>We made our office jobs remote</h2>
-					<p>We are Michael and Adriaan and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via this quiz.</p>
-				</div>
+					<p><a href="/who">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via this quiz.</p>
+          <footer>
+            <ul class="actions">
+              <li><a class="button">Do the quiz</a></li>
+            </ul>
+          </footer>
+        </div>
 				<span class="image"><img src="{{ site.baseurl }}/images/pic07.jpg" alt="" /></span>
 			</section>
 		</div>
