Add links from the homepage to the quiz

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ posts:
 			<section class="spotlight">
 				<div class="content">
 					<h2>We made our office jobs remote</h2>
-					<p><a href="/who">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via this quiz.</p>
+					<p><a href="/who">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via <a class="button" href="/quiz">this quiz</a>.</p>
           <footer>
             <ul class="actions">
-              <li><a class="button">Do the quiz</a></li>
+              <li><a class="button" href="/quiz">Do the quiz</a></li>
             </ul>
           </footer>
         </div>
