Replace tabs with spaces

--- a/index.html
+++ b/index.html
@@ -54,34 +54,34 @@ posts:
 {% include layout/banner.html slides=page.banner %}
 
 <!-- One -->
-	<section id="one" class="wrapper major-pad">
-		<div class="inner">
-			<section class="spotlight">
-				<div class="content">
-					<h2>We made our office jobs remote</h2>
-					<p><a href="/who">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via <a class="button" href="/quiz">this quiz</a>.</p>
+ <section id="one" class="wrapper major-pad">
+  <div class="inner">
+   <section class="spotlight">
+    <div class="content">
+     <h2>We made our office jobs remote</h2>
+     <p><a href="/who">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via <a href="/quiz">this quiz</a>.</p>
           <footer>
             <ul class="actions">
               <li><a class="button" href="/quiz">Do the quiz</a></li>
             </ul>
           </footer>
         </div>
-				<span class="image"><img src="{{ site.baseurl }}/images/pic07.jpg" alt="" /></span>
-			</section>
-		</div>
-	</section>
+    <span class="image"><img src="{{ site.baseurl }}/images/pic07.jpg" alt="" /></span>
+   </section>
+  </div>
+ </section>
 
 <!-- Two -->
-	<section id="two" class="wrapper content-pad">
-		<div class="inner">
-			{% include components/features.html features=page.features %}
-		</div>
-	</section>
+ <section id="two" class="wrapper content-pad">
+  <div class="inner">
+   {% include components/features.html features=page.features %}
+  </div>
+ </section>
 
 <!-- Three -->
-	<section id="three" class="wrapper style2">
-		<div class="inner">
-			<h2>Etiam sed tellus</h2>
-			{% include components/posts.html posts=page.posts %}
-		</div>
-	</section>
+ <section id="three" class="wrapper style2">
+  <div class="inner">
+   <h2>Etiam sed tellus</h2>
+   {% include components/posts.html posts=page.posts %}
+  </div>
+ </section>
