--- a/index.html
+++ b/index.html
@@ -72,16 +72,18 @@ posts:
  </section>
 
 <!-- Two -->
+{% comment %}
  <section id="two" class="wrapper content-pad">
   <div class="inner">
    {% include components/features.html features=page.features %}
   </div>
  </section>
 
+  {% endcomment %}
 <!-- Three -->
  <section id="three" class="wrapper style2">
   <div class="inner">
-   <h2>Etiam sed tellus</h2>
-   {% include components/posts.html posts=page.posts %}
+   <h2>Read our blog where we post articles why remote movement will be the future</h2>
+   {% include components/posts.html posts=site.posts %}
   </div>
  </section>
