--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: default
 header_class: alt
 
 banner:
-- image: /images/work-from-cafe.jpg
-  title: Start working remotely
-  url: "#"
-- image: /images/work-at-sea.jpg
+- image: https://lh3.googleusercontent.com/GBus78m69J8uGG6m2Ll_BzYFYO8-sdObpLyWZOI3MYCedKuji9bl_iPPVtG67iKyCEHcWawiau7SpXcAYW033hgxxx0YuLkidroTIcBvsbru9KEPe5dBpagySu5h93PZi-dWfE2_xBvBCHiAKYHJ8liQKIsdbCP9kYSiK0o2d5xED_oeyVEWwEs6NFgdazPzPXb83Sgf-XXqYSVNiQ3WW6MVLVUQWebO6LvDw65TYu8RvpRO1NfERh_XAwpSxnXMXi8sFspikoNn_R3avjptykL4YD7Z5WxswrV2bRP1F8CZuAg6LEHQroGT88vfMq28oD0UgO6x_VNhOrBGq2HeFlwTHHV65Ot98Km6D5Hd_vp66A_nmtaoYyosFX8uVJLLOJa-NjDzTV9yoh3MgnEkEjB-r0MREPZRQEAlyau7j-mPcHc_zMvF363dmK6qAbOVtKP2734TP74-wnwb-vLNpba6bVF5SRC73G1m4vRZhNuI9M9v4ODCMNCFCZ4OEwy0ZUP0zYvFE9b2ZbGMlaBtprt3oFmJmOUbcNnd3u3En_SGuo53owHd7j8F5ai0Ze5Jha-hbAF94IbSJNmIV5QtHC8Ug6I5-s7ibVYBItU3z6PNC1o-RlpCoQ=w1791-h1343-no
   title: Make your life yours again
   url: "#"
-- image: /images/laptop-forest.jpg
+- image: https://lh3.googleusercontent.com/SHp1FVSPky6w4fAnZv6PMFeUMCAfjEhwq4nZiXR2cCFGADMgMGgHcewhG1eyJiMtOJOgdazTsTpKPxfS3JZ_EsOeVHU5wx9luvT5JgCxMrFqu05Mn4ISWjjgxN-EHEbuOB6EVjTgJ58IwzqpUFrClI8ymbGYKKsD1X7nDK3Wo7MCOG17ZkbgDNbZ9hQU1nUp8JPneCxAKqDAxSb-9blSZw39phSQzlK4qXeCqPV9pEV9B3gwcRfp09XybtNzNzJb1QZr6iOMgzjxpFUIFp0QsOKLJFgOyL3CQKWtbvWUbP7av1UKXZHNMpKjIYcGlf3gv_CGVHtDYUNqt9aiVpocfO7nTW9YV_XXh8magQTbeBhyi5JBOvfslX8yD-VPKaje1M-v0cXoOaMs6MNENvlgbUU_KGK6zaTb3MU8CyiGk3NBpuHwK2_Y_Qe6Rk6_obeS76mU-0qo1gVKns81u-hc3eMG5WPKPYAwejERUeJ4G04Yh-F76NAATCmiZ74zrg6obArheIyDfwbvVovZCCcxzd6Ap-5DCVHm2KiYqmp3xPL6Rq2OpKcb1XLeWuTrrcSf5oLH3fNTjs46yeLWJEmGQwMerUAUt711o3f3g4uXW96Js-T4ZKbSoA=s1343-no
+  title: Start working remotely
+  url: "#"
+- image: https://lh3.googleusercontent.com/Rg5HXWpMKhUIlzEATDCrVr8PEZTb2ezGxFExE0NXP9xKP5Ko_LI8qFlREXzE-DaQL1nuRZ0QgKS9t4yuwQ_0knXQ7DgoHoMf9z46hv7IZirv0j-hi3dsy3Mv-Lemn3p33Sjn_W7DqtifNciyKgPObsPxofTaXjiYSOdHZAQ5cVqc44PVr8m4O_e7_8b_NJig0Xpc9v2qxHWQ99Fa2q3Ip_zMZXQCd3CKPbseRx1hzktkKlALkq3dfOk2uBl_svmUVA5w-CVuC2Ijk1X_VAC9B_noZpPLkqUv9hV6mJvHWVpsV-hbQQhZq5o4cYnEtDAVSpFe3DLvIaiC64dwRyU8CLqeL-MBtcS19hQY0e99I2w8wKy9W7iBue37kTrHbtHO9ZQ0IRO2tisj4w_gBxPNqgwP2FQ2PNZheWxnJklvqDIqEuUB3hwWQa8MG9XqcyYx6HXg_M501ay5CPfmbXXXuInXHoYH_sn6HDBClw88yUdItYw9C4fEYPg5pGXSSdLtpcw4v_hrq4nK38LkoTAm1N10pWM9NXF0NWtLjDw9xEB51mOC-tznu2JAK96NbFEVhBh0kCCw4slhLXI2bun_rZjrYHgZ0HmWTJRVU28DeX2abfNw5ISovA=w1791-h1343-no
   title: Can I do my job remotely?
   url: "#"
 
@@ -23,32 +23,6 @@ features:
 - icon: fa-cloud
   title: Magnis curabitur
   excerpt: Duis vulputate sit amet metus quis facilisis. Sed dapibus neque erat fringilla tincidunt. Nullam sapien et sapien, iaculis ac varius ultrices nec metus. Aenean ultricies magna.
-
-posts:
-- image: /images/pic01.jpg
-  title: Congue portitor
-  excerpt: Aenean ultricies magna non sapien rhoncus, ac ullamcorper lorem convallis. Quisque at venenatis nisi, amet finibus mauris. Sed sodales ultricies eros, sit amet sodales sapien.
-  url: "#"
-- image: /images/pic02.jpg
-  title: Duis nisl euismod
-  excerpt: Ultrices nec metus. Aenean ultricies magna et sapien rhoncus ac ullamcorper lorem convallis. Quisque at venenatis nisi amet finibus mauris. Sed sodales ultricies magna etiam.
-  url: "#"
-- image: /images/pic03.jpg
-  title: Elementum auctor
-  excerpt: Quis interdum. Lorem quis lacus justo. Sed libero condimentum vehicula sem vel, mattis amet mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi aliquam aenean.
-  url: "#"
-- image: /images/pic04.jpg
-  title: Urna vel lacinia
-  excerpt: Integer vel tincidunt lacus. Nulla augue nunc, eleifend quis leo ac, maximus interdum tellus. Etiam at vestibulum felis, id efficitur risus. Praesent ac nulla ex. Duis elementum.
-  url: "#"
-- image: /images/pic05.jpg
-  title: Neque et suscipit
-  excerpt: Libero condimentum, vehicula sem vel, mattis mauris. Nullam lacinia sit amet felis vel vestibulum. Morbi in aliquam est. Aenean dapibus porttitor nulla ultrices venenatis.
-  url: "#"
-- image: /images/pic06.jpg
-  title: Vestibulum placerat
-  excerpt: Tristique tellus et ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent mauris risus, pellentesque eu leo non, tincidunt.
-  url: "#"
 ---
 
 {% include layout/banner.html slides=page.banner %}
@@ -66,7 +40,7 @@ posts:
             </ul>
           </footer>
         </div>
-    <span class="image"><img src="{{ site.baseurl }}/images/pic07.jpg" alt="" /></span>
+    <span class="image"><img src="/images/window.jpg" alt="Work from home" /></span>
    </section>
   </div>
  </section>
@@ -78,8 +52,8 @@ posts:
    {% include components/features.html features=page.features %}
   </div>
  </section>
+{% endcomment %}
 
-  {% endcomment %}
 <!-- Three -->
  <section id="three" class="wrapper style2">
   <div class="inner">
