--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 header_class: alt
 
 banner:
-- image: /images/work-from-the-beach.jpg
+- image: /images/work-at-sea.jpg
   title: Make your life yours again
   url: "#"
-- image: /images/nest-coworking.jpg
+- image: /images/work-from-cafe.jpg
   title: Start working remotely
   url: "#"
 
@@ -30,7 +30,7 @@ features:
    <section class="spotlight">
     <div class="content">
      <h2>We made our office jobs remote</h2>
-     <p><a href="/who">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via <a href="/quiz">this quiz</a>.</p>
+     <p><a href="/about">We are Michael and Adriaan</a> and we converted our office jobs into remote jobs. Do you also want to work from home or a tropical beach? Check if your job can be done remotely via <a href="/quiz">this quiz</a>.</p>
           <footer>
             <ul class="actions">
               <li><a class="button" href="/quiz">Do the quiz</a></li>
@@ -54,7 +54,7 @@ features:
 <!-- Three -->
  <section id="three" class="wrapper style2">
   <div class="inner">
-   <h2>Read our blog where we post articles why remote movement will be the future</h2>
+   <h2>Why we think remote movement will be the future</h2>
    {% include components/posts.html posts=site.posts %}
   </div>
  </section>
