Meeting fixes of today

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ header_class: alt
 
 banner:
 - image: /images/work-at-sea.jpg
-  title: Make your life yours again
-  url: "#"
+  title: Struggling towards remote?
+  url: "/remote-working-the-struggle-is-real"
 - image: /images/work-from-cafe.jpg
-  title: Start working remotely
-  url: "#"
+  title: Can your job be remote?
+  url: "/quiz"
 
 features:
 - icon: fa-pencil
